--- a/diabetes-manager/package.json
+++ b/diabetes-manager/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "aws-amplify": "^1.1.26",
+    "aws-amplify-react": "^2.3.6",
     "axios": "^0.18.0",
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.8.0",
+    "plotly.js": "^1.47.1",
     "react": "^16.8.6",
+    "react-chartkick": "^0.3.0",
     "react-dom": "^16.8.6",
+    "react-linechart": "^1.1.12",
+    "react-media": "^1.9.2",
+    "react-plotly.js": "^2.3.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
