--- a/diabetes-manager/package.json
+++ b/diabetes-manager/package.json
@@ -12,7 +12,9 @@
     "chart.js": "^2.8.0",
     "plotly.js": "^1.47.1",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-chartkick": "^0.3.0",
+    "react-d3-graph": "^2.0.1",
     "react-dom": "^16.8.6",
     "react-linechart": "^1.1.12",
     "react-media": "^1.9.2",
